--- a/home.html
+++ b/home.html
@@ -39,20 +39,23 @@
 <div class="clearfix">&nbsp;</div>
 <div class="row wrapper">
   <div class="row headmenu">
-    <div class="col-xs-4 item" id="btnIngredientes" data-toggle="modal" data-target="#searchModal">
+    <div class="col-xs-3 item" id="btnIngredientes" data-toggle="modal" data-target="#searchModal">
       <h1><i class="fa fa-flask"></i></h1>
       <small>Principio Activo</small></div>
-    <div class="col-xs-4 borde item" id="btnLaboratorios" data-toggle="modal" data-target="#searchModal">
+    <div class="col-xs-3 borde item" id="btnLaboratorios" data-toggle="modal" data-target="#searchModal">
       <h1><i class="fa fa-industry"></i></h1>
       <small>Laboratorio</small></div>
-    <div class="col-xs-4 item" id="btnProductos" data-toggle="modal" data-target="#searchModal">
+    <div class="col-xs-3 borde item" id="btnProductos" data-toggle="modal" data-target="#searchModal">
       <h1><i class="fa fa-tags"></i></h1>
       <small>Productos</small></div>
+      <div class="col-xs-3 item" id="btnEspecies" data-toggle="modal" data-target="#searchModal">
+      <h1><i class="fa fa-paw"></i></h1>
+      <small>Especies</small></div>
   </div>
   <div class="clearfix">&nbsp;</div>
   <div class="clearfix">&nbsp;</div>
   <h4 class="titulo">QuickVet<sup>&reg;</sup></h4>
-  <p>QuickVet App, es la forma eficaz de encontrar información sobre fármacos de uso veterinario, desde su teléfono móvil o tablet.  Cuenta con más de 3 000 productos que se comercializan en Ecuador. Obtendrá información como: Nombre comercial del producto, principio activo, laboratorio, índice terapéutico, especies animales, clasificación ATC, reacciones adversas, interacciones medicamentosas e incluye los precios referenciales de venta al público.</p>
+  <p>QuickVet App, es la herramienta eficaz para encontrar información sobre fármacos de uso veterinario, desde su teléfono móvil o tablet.  Cuenta con más de 3 000 productos que se comercializan en Ecuador. Obtendrá información como: Nombre comercial del producto, principio activo, laboratorio, índice terapéutico, especies animales, clasificación ATC, reacciones adversas, interacciones medicamentosas e incluye los precios referenciales de venta al público.</p>
   <div class="clearfix">&nbsp;</div>
   
   <div class="clearfix">&nbsp;</div>
