--- a/settings.html
+++ b/settings.html
@@ -39,15 +39,18 @@
 <div class="clearfix">&nbsp;</div>
 <div class="row wrapper">
   <div class="row headmenu">
-    <div class="col-xs-4 item" id="btnIngredientes" data-toggle="modal" data-target="#searchModal">
+    <div class="col-xs-3 item" id="btnIngredientes" data-toggle="modal" data-target="#searchModal">
       <h1><i class="fa fa-flask"></i></h1>
       <small>Principio Activo</small></div>
-    <div class="col-xs-4 borde item" id="btnLaboratorios" data-toggle="modal" data-target="#searchModal">
+    <div class="col-xs-3 borde item" id="btnLaboratorios" data-toggle="modal" data-target="#searchModal">
       <h1><i class="fa fa-industry"></i></h1>
       <small>Laboratorio</small></div>
-    <div class="col-xs-4 item" id="btnProductos" data-toggle="modal" data-target="#searchModal">
+    <div class="col-xs-3 borde item" id="btnProductos" data-toggle="modal" data-target="#searchModal">
       <h1><i class="fa fa-tags"></i></h1>
       <small>Productos</small></div>
+      <div class="col-xs-3 item" id="btnEspecies" data-toggle="modal" data-target="#searchModal">
+      <h1><i class="fa fa-tags"></i></h1>
+      <small>Especies</small></div>
   </div>
   <div class="clearfix">&nbsp;</div>
   <section id="personales">
