--- a/settings.html
+++ b/settings.html
@@ -547,9 +547,9 @@
 				}
 						
 			});  
-		$('.loader').fadeOut('slow');
-			//getSettings();
-		    
+		
+			getSettings();
+			$('.loader').fadeOut('slow');    
 			
 			
         });
