--- a/index.html
+++ b/index.html
@@ -215,47 +215,11 @@
 		
 	/*Analytics*/
 	window.ga.trackView('Intro');
-		
+		alert('ondevice');
 		document.addEventListener("deviceready", onDeviceReady, false);
+		alert('ready');
     });
     	
-function onDeviceReady() {
-    //alert('cordova'+device.cordova);
-	
-	
-			
-		//alert('Dispositivo: '+device.uuid);
-		window.localStorage.setItem('deviceuuid', ''+device.uuid);
-		
-		$.getJSON("https://quickvet.edifarm.com.ec/ws/mobile/login.php", {
-			deviceuuid:device.uuid, 
-			devicename:device.manufacturer, 
-			version:device.version, 
-			platform:device.platform, 
-			model:device.model,
-			action: 'consultar',
-		}, function(data) {
-			var da=''+JSON.stringify(data);
-			//alert('data:'+da);
-		}).done(function (data) {
-			var r = data.respuesta;
-			
-			if (r === '1') {
-				window.location = 'home.html';
-			}
-
-		}).fail(function (data) {
-			var dt=''+JSON.stringify(data);
-			//alert('data:'+dt);
-		})
-		.always(function (data) {
-			$('.loader_init').fadeOut('slow');
-		});
-
-		//alert('final'+device.uuid);
-	
-}
-	
 onDeviceReady();
 //alert('final');
     </script>
