--- a/index.html
+++ b/index.html
@@ -144,7 +144,6 @@
 	$(document).ready(function(e) {
 		
 		
-   alert('cordova'+device.cordova);
 		
 		$('#entrar').click(function(e) {
 				
@@ -225,8 +224,12 @@ onDeviceReady();
 //alert('final');
 	
 	/*Analytics*/
-	window.ga.trackView('Intro');
+	//window.ga.trackView('Intro');
 	alert('Analytics');
+	
+	
+   alert('cordova'+device.cordova);
+	
     </script>
     
 </body>
