--- a/index.html
+++ b/index.html
@@ -143,7 +143,9 @@
 <script type="application/javascript">
 	$(document).ready(function(e) {
 		
+		alert('H');
 		
+		alert('cordova'+device.cordova);
 		
 		$('#entrar').click(function(e) {
 				
@@ -212,7 +214,6 @@
 		
 		
 		
-   alert('cordova'+device.cordova);
 		
 	
 		alert('ondevice');
