--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 		
 		alert('H');
 		
-		alert('cordova'+device.cordova);
+		alert('cordova'+device.uuid);
 		
 		$('#entrar').click(function(e) {
 				
