--- a/index.html
+++ b/index.html
@@ -217,12 +217,13 @@
 		
 	
 		alert('ondevice');
-		document.addEventListener("deviceready", onDeviceReady, false);
+		//document.addEventListener("deviceready", onDeviceReady, false);
+		
+		onDeviceReady();
 		alert('ready');
     });
     	
 	
-onDeviceReady();
 //alert('final');
 	
 	/*Analytics*/
