--- a/about.html
+++ b/about.html
@@ -192,7 +192,7 @@ QuickMed <sup>&reg;</sup></a></div>
 
 	//	alert('f');
 	/*Analytics*/
-	window.ga.trackView('About');
+	//window.ga.trackView('About');
     </script>
 </body>
 </html>
