--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 		//document.addEventListener("deviceready", onDeviceReady, false);
 		
 		onDeviceReady();
-		alert('ready');
+		alert('ready index');
     });
     	
 	
