--- a/info.html
+++ b/info.html
@@ -409,7 +409,7 @@
         
 		});
 	/*Analytics*/
-	window.ga.trackView('Info?doc='+doc);
+	//window.ga.trackView('Info?doc='+doc);
 			
 	
 	</script>
