--- a/newuser.html
+++ b/newuser.html
@@ -523,7 +523,7 @@
 				$('#cumple').combodate();    
 			});
 	/*Analytics*/
-	window.ga.trackView('NewUser');
+	//window.ga.trackView('NewUser');
 			</script>
 
 </body>
