--- a/settings.html
+++ b/settings.html
@@ -562,7 +562,7 @@
 				$('#cumple').combodate();    
 			});
 	/*Analytics*/
-	window.ga.trackView('Settings');
+	//window.ga.trackView('Settings');
 	
 	
 	
