--- a/terms.html
+++ b/terms.html
@@ -322,8 +322,9 @@
 		$('.loader').hide('slow');
 
 		
-	});/*Analytics*/
-		window.ga.trackView('Terms');
+	});
+	/*Analytics*/
+	//	window.ga.trackView('Terms');
 
 </script>
 </body>
