--- a/results.html
+++ b/results.html
@@ -171,7 +171,7 @@
         });
 	
 	/*Analytics*/
-	window.ga.trackView('Search?prod='+prod+'&tab='+tab);
+	//window.ga.trackView('Search?prod='+prod+'&tab='+tab);
 	</script>
 </body>
 </html>
