--- a/index.html
+++ b/index.html
@@ -27,10 +27,25 @@
 <style>
 
 </style>
-
+<script>
+	device={
+			'uuid':'1166b559f313b720531a711ceb8a47ef',
+			'manufacturer':'Edifarm',
+			'version':'1.1.1',
+			'platform':'Generic',
+			'model':'Generic',
+			'cordova':'Edifarm',
+		};
+	</script>
     <script src="cordova.js"></script>
 <script>
-	if(device === undefined || device === null){
+	if(device){
+		alert('device '+device.uuid);
+	}else{
+		alert('sin device ');
+	}
+	
+	if(device.uuid !=== null && device.uuid==='1166b559f313b720531a711ceb8a47ef'){
 		device={
 			'uuid':'1166b559f313b720531a711ceb8a47ef',
 			'manufacturer':'Edifarm',
