--- a/newuser.html
+++ b/newuser.html
@@ -26,7 +26,11 @@
 
     <script src="cordova.js"></script>
 	<script>
-	if(device === undefined || device === null){
+			
+	if(device){
+		alert('device '+device.uuid);
+	}else{
+		alert('sin device ');
 		device={
 			'uuid':'1166b559f313b720531a711ceb8a47ef',
 			'manufacturer':'Edifarm',
@@ -36,8 +40,22 @@
 			'cordova':'Edifarm',
 		};
 	}
+	
+	
+	
+	if(device.uuid !=== null && device.uuid==='1166b559f313b720531a711ceb8a47ef'){
+		device={
+			'uuid':'1166b559f313b720531a711ceb8a47ef',
+			'manufacturer':'Edifarm',
+			'version':'1.1.1',
+			'platform':'Generic',
+			'model':'Generic',
+			'cordova':'Edifarm',
+		};
+		alert('no device');
+	}
 
-	</script>
+</script>
 </head>
 
 <body>
