--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 <script type="application/javascript">
 	$(document).ready(function(e) {
 		
-		alert('H');
+		//alert('H');
 		
 		alert('cordova '+device.uuid);
 		
@@ -220,10 +220,10 @@
 		
 	
 		alert('ondevice');
-		//document.addEventListener("deviceready", onDeviceReady, false);
+		document.addEventListener("deviceready", onDeviceReady, false);
 		
-		onDeviceReady();
-		alert('ready index');
+		//onDeviceReady();
+		//alert('ready index');
     });
     	
 	
