--- a/settings.html
+++ b/settings.html
@@ -478,9 +478,9 @@
 <script type="text/javascript"> 
 
 	$(document).ready(function(e) {
-//var deviceuuid=getDeviceId();
-//		alert('Device UUID: '+deviceuuid);
-		//zalert('UUID: '+device.uuid);
+		var uuid = window.localStorage.getItem("deviceuuid");
+
+		alert(''+device.uuid+'-'+uuid);
 		
        		document.addEventListener("deviceready", getSettings, false);
 			
