--- a/index.html
+++ b/index.html
@@ -225,10 +225,9 @@
 		
 	
 		//alert('ondevice');
-		//document.addEventListener("deviceready", onDeviceReady, false);
+		document.addEventListener("deviceready", onDeviceReady, false);
 		
-		
-		//alert('ready index');
+		alert('ready index');
     });
     	
 	
@@ -239,10 +238,11 @@
 	//alert('Analytics index');
 	
 	
-	document.addEventListener("deviceready", onDeviceReady, false);
+	//document.addEventListener("deviceready", onDeviceReady, false);
 	//alert('F');
 	//onDeviceReady();
-    </script>
+    //alert('on device ready final');
+	</script>
     
 </body>
 </html>
