--- a/newuser.html
+++ b/newuser.html
@@ -402,7 +402,7 @@
 <script type="text/javascript"> 
 		$(document).ready(function(e) {
 			
-			ondeviceReady();
+			onDeviceReady();
 			alert('listo para registro');
 			
 			$('.loader').fadeOut('slow');
