--- a/settings.html
+++ b/settings.html
@@ -474,6 +474,7 @@
 <script src="js/md5.js"></script> 
 <script src="js/main.js"></script> 
 <script src="js/searchControll.js"></script> 
+<script src="js/combodate.js"></script> 
  
 <script type="text/javascript"> 
 
