--- a/home.html
+++ b/home.html
@@ -173,7 +173,7 @@ function onDeviceReadyHome() {
 	
 	
 	//alert(''+uuid);
-	alert(''+device.uuid+'-'+uuid);
+	//alert(''+device.uuid+'-'+uuid);
 	
 	
             var doc='nuevos';
@@ -194,7 +194,7 @@ function onDeviceReadyHome() {
 				
 			}, function(response) {
 			  //console.log( "success" );
-				alert('success');
+				//alert('success');
 			  
 			})
 			  .done(function(data) {
