--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 		//document.addEventListener("deviceready", onDeviceReady, false);
 		
 		onDeviceReady();
-		alert('ready index');
+		//alert('ready index');
     });
     	
 	
