--- a/settings.html
+++ b/settings.html
@@ -473,7 +473,8 @@
  
 <script src="js/md5.js"></script> 
 <script src="js/main.js"></script> 
-<script src="js/searchControll.js"></script> 
+<script src="js/searchControll.js"></script>
+<script src="js/moment.min.js"></script>  
 <script src="js/combodate.js"></script> 
  
 <script type="text/javascript"> 
@@ -481,7 +482,7 @@
 	$(document).ready(function(e) {
 		var uuid = window.localStorage.getItem("deviceuuid");
 
-		alert(''+device.uuid+'-'+uuid);
+		//alert(''+device.uuid+'-'+uuid);
 		getSettings();
 //       	document.addEventListener("deviceready", getSettings, false);
 			
