--- a/settings.html
+++ b/settings.html
@@ -554,8 +554,8 @@
 						
 			});  
 		
-			getSettings();
-			$('.loader').fadeOut('slow');    
+			//getSettings();
+			//$('.loader').fadeOut('slow');    
 			
 			
         });
