Actualizacioncon banner Life v2

--- a/about.html
+++ b/about.html
@@ -56,13 +56,14 @@
       <h1><i class="fa fa-paw"></i></h1>
       <small>Especies</small></div>
   </div>
+    <img src="img/life.gif" alt="Life" class="publicidad">
   <section id="terminos">
   <div class="clearfix">&nbsp;</div>
     <h4 class="subtitulo">Acerca de QuickVet<sup>&reg;</sup> App</h4>
     <div class="clearfix">&nbsp;</div>
     <p>Aplicación desarrollada para Edifarm y Compa&ntilde;&iacute;a. &copy; Todos los derechos reservados</p>
     <p><strong>Versi&oacute;n</strong></p>
-    <p>2.1.1</p>
+    <p>2.2.1</p>
   </section>
   <div class="clearfix">&nbsp;</div>
   <div class="clearfix">&nbsp;</div>
