--- a/home.html
+++ b/home.html
@@ -42,6 +42,7 @@
 </div>
 <div class="clearfix">&nbsp;</div>
 <div class="row wrapper">
+    <img src="img/life.gif" alt="Life" class="publicidad">
   <div class="row headmenu">
     <div class="col-xs-3 item" id="btnIngredientes" data-toggle="modal" data-target="#searchModal">
       <h1><i class="fa fa-flask"></i></h1>
