--- a/info.html
+++ b/info.html
@@ -41,6 +41,7 @@
 </div>
 <div class="clearfix">&nbsp;</div>
 <div class="row wrapper">
+    <img src="img/life.gif" alt="Life" class="publicidad">
   <ol class="breadcrumb">
     <li><a href="javascript:history.back()"><i class="fa fa-angle-double-left"></i> lista</a></li>
   </ol>
