--- a/newuser.html
+++ b/newuser.html
@@ -47,6 +47,7 @@
 </div>
 <div class="clearfix">&nbsp;</div>
 <div class="row wrapper">
+    <img src="img/life.gif" alt="Life" class="publicidad">
   <section id="personales">
     <div class="account">
       <h4 class="subtitulo">Regístrate</h4>
