--- a/settings.html
+++ b/settings.html
@@ -57,6 +57,7 @@
       <small>Especies</small></div>
   </div>
   <div class="clearfix">&nbsp;</div>
+    <img src="img/life.gif" alt="Life" class="publicidad">
   <section id="personales">
     <div class="account"> 
       
