--- a/terms.html
+++ b/terms.html
@@ -57,6 +57,7 @@
       <h1><i class="fa fa-paw"></i></h1>
       <small>Especies</small></div>
   </div>
+    <img src="img/life.gif" alt="Life" class="publicidad">
   <section id="terminos">
   <div class="clearfix">&nbsp;</div>
     <h4 class="subtitulo">T&eacute;rminos y Condiciones</h4>
