Actualizacion de front-end v2.2.9

--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
   <div class="row headmenu">
     <div class="col-xs-3 item" id="btnIngredientes" data-toggle="modal" data-target="#searchModal">
       <h1><i class="fa fa-flask"></i></h1>
-      <small>Principio Activo</small></div>
+      <small>Prin. Activo</small></div>
     <div class="col-xs-3 borde item" id="btnLaboratorios" data-toggle="modal" data-target="#searchModal">
       <h1><i class="fa fa-industry"></i></h1>
       <small>Laboratorio</small></div>
@@ -63,7 +63,7 @@
     <div class="clearfix">&nbsp;</div>
     <p>Aplicación desarrollada para Edifarm y Compa&ntilde;&iacute;a. &copy; Todos los derechos reservados</p>
     <p><strong>Versi&oacute;n</strong></p>
-    <p>2.2.8</p>
+    <p>2.2.9</p>
   </section>
   <div class="clearfix">&nbsp;</div>
   <div class="clearfix">&nbsp;</div>
