--- a/home.html
+++ b/home.html
@@ -46,7 +46,7 @@
   <div class="row headmenu">
     <div class="col-xs-3 item" id="btnIngredientes" data-toggle="modal" data-target="#searchModal">
       <h1><i class="fa fa-flask"></i></h1>
-      <small>Principio Activo</small></div>
+      <small>Prin. Activo</small></div>
     <div class="col-xs-3 borde item" id="btnLaboratorios" data-toggle="modal" data-target="#searchModal">
       <h1><i class="fa fa-industry"></i></h1>
       <small>Laboratorio</small></div>
