Actualizacion de front-end v2.2.10

--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
     <div class="clearfix">&nbsp;</div>
     <p>Aplicación desarrollada para Edifarm y Compa&ntilde;&iacute;a. &copy; Todos los derechos reservados</p>
     <p><strong>Versi&oacute;n</strong></p>
-    <p>2.2.9</p>
+    <p>2.2.10</p>
   </section>
   <div class="clearfix">&nbsp;</div>
   <div class="clearfix">&nbsp;</div>
@@ -112,7 +112,7 @@ QuickMed <sup>&reg;</sup></a></div>
 <div class="modal fade" tabindex="-1" role="dialog" id="searchModal">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
-      <form action="results.html" id="serchForm" method="get">
+      <form action="results.html" id="searchForm" method="get">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
           <h4 class="modal-title" id="modal-title">Buscar <span>Productos</span></h4>
