--- a/terms.html
+++ b/terms.html
@@ -282,7 +282,7 @@
 <div class="modal fade" tabindex="-1" role="dialog" id="searchModal">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
-      <form action="results.html" id="serchForm" method="get">
+      <form action="results.html" id="searchForm" method="get">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
           <h4 class="modal-title" id="modal-title">Buscar <span>Productos</span></h4>
