--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 		//alert('ready index');
 		
 		if(device && device.manufacturer==='Apple'){
-			alert('permiso apple');
+			//alert('permiso apple');
 			window.FirebasePlugin.grantPermission();
 			
 			window.FirebasePlugin.hasPermission(function(data){
